syntax = "proto2";
package com.my.algorithm.proto;

option optimize_for = LITE_RUNTIME;
//option cc_enable_arenas = false;

//// For Java.
//option java_outer_classname = "ProtoGrid";

import "protocol/ProtoRectSlot.proto";

message MsgGrid {
    required uint64 id = 1;
    required string name = 2;
    repeated MsgRectSlot slots = 3;
}
